--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,13 @@ p {
     top: 0;
     font-weight: 700;
     z-index: 1;
-    padding: 0 32px;
+    padding: 16px 32px;
+}
+
+.nav-content {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center; 
 }
   
 .navlink {
@@ -38,83 +44,96 @@ p {
 }
 .navlink:link,
 .navlink:visited {
-color: #4C4949;
+    color: #4C4949;
 }
 
 .navlink:hover {
-color: #608959;
+    color: #608959;
 }
 
+
+
+/* Mobile navigation */
+@media (max-width: 599px) {
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .menu-icon {
+        user-select: none;
+        cursor: pointer;
+    }
+    
+    .menu-icon .navicon {
+        background: #333;
+        display: block;
+        height: 2px;
+        position: relative;
+        transition: background .2s ease-out;
+        width: 18px;
+    }
+      
+    .menu-icon .navicon:before,
+    .menu-icon .navicon:after {
+        background: #333;
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
+        transition: all .2s ease-out;
+        width: 100%;
+    }
+    
+    .navlinks {
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 200ms ease-out;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background: white;
+        width: 100%;
+        padding: 0 32px;
+        margin-top: -16px;
+    }
+    .navlink:last-child {
+        margin-bottom: 16px;
+    }
 
   
-.navlinks li a:hover,
-  .navlinks .menu-btn:hover {
-    background-color: #f4f4f4;
-}
-  
-.navlinks .logo {
-    display: block;
-    float: left;
-    font-size: 2em;
-    padding: 10px 20px;
-    text-decoration: none;
+    .menu-icon .navicon:before {
+        top: 5px;
+    }
+    
+    .menu-icon .navicon:after {
+        top: -5px;
+    }
+
+    .menu-btn:checked ~ .menu-icon .navicon:before {
+        transform: rotate(-45deg);
+        top: 0;
+    }
+
+    .menu-btn:checked ~ .menu-icon .navicon:after {
+        transform: rotate(45deg);
+        top: 0;
+    }
+
+    .menu-btn:checked ~ .navlinks {
+        max-height: 50vh;
+    }
+
+    .menu-btn:checked ~ .menu-icon .navicon {
+        background: transparent;
+    }
+
 }
 
-.menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-}
-
-
-.menu-icon {
-    user-select: none;
-    cursor: pointer;
-    float: right;
-}
-
-.menu-btn {
-    display: none;
-}
-
-.menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-}
-  
-.menu-icon .navicon:before,
-.menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
-  
-.menu-icon .navicon:before {
-    top: 5px;
-}
-  
-.menu-icon .navicon:after {
-    top: -5px;
-}
-
-
-.menu-btn:checked ~ .navlinks {
-    max-height: 240px;
-}
-
-.menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-}
-
-
+/* Desktop navigation */
 @media (min-width: 600px) {
     .menu-icon {
         display: none;
@@ -128,33 +147,22 @@ color: #608959;
         margin: 0 auto;
         
     }
-    
-    
+
     .navlink {
         padding: 20px 0 20px 40px;
         display: inline-block;
         text-decoration: none;
     
     }
-    
+
     .navlinks {
         text-align: right;
     }
-
-   
-    
 }
-
-
 
 .logo {
     display: flex;
-
 }
-
-
-
-
 
 .illustration {
     max-width: 100%;
@@ -374,7 +382,6 @@ color: #608959;
     margin: 0 auto;
     padding: 0 32px;
     max-width: 800px;
-    
 }
 
 .content-home {
