--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,12 @@ p {
     padding: 30px 0;
     margin: 30px 0;
 }
-
+.stage4 {
+    background-color: #B78931;
+    width: 100%;
+    padding: 30px 0;
+    margin: 30px 0;
+}
 
 .stage-text {
     color: white;
@@ -543,6 +548,14 @@ li {
     max-width: 100%;
 } 
 
+.hero-wtj { 
+    background: #B78931;
+    display: flex;
+    align-items: center;
+    padding-top: 2em;
+    justify-content: center;
+    max-width: 100%;
+} 
 
 .mirror-content {
     align-items: center;
