--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@ p {
 .nav-content {
     display: grid;
     grid-template-columns: auto 1fr;
-    align-items: center; 
+    align-items: center;
 }
-  
+
 .navlink {
     text-decoration: none;
     padding: 8px 0;
@@ -61,11 +61,12 @@ p {
         flex-direction: column;
         align-items: flex-end;
     }
+
     .menu-icon {
         user-select: none;
         cursor: pointer;
     }
-    
+
     .menu-icon .navicon {
         background: #333;
         display: block;
@@ -74,7 +75,7 @@ p {
         transition: background .2s ease-out;
         width: 18px;
     }
-      
+
     .menu-icon .navicon:before,
     .menu-icon .navicon:after {
         background: #333;
@@ -85,7 +86,7 @@ p {
         transition: all .2s ease-out;
         width: 100%;
     }
-    
+
     .navlinks {
         overflow: hidden;
         max-height: 0;
@@ -101,34 +102,35 @@ p {
         padding: 0 32px;
         margin-top: -16px;
     }
+
     .navlink:last-child {
         margin-bottom: 16px;
     }
 
-  
+
     .menu-icon .navicon:before {
         top: 5px;
     }
-    
+
     .menu-icon .navicon:after {
         top: -5px;
     }
 
-    #menu-btn:checked ~ .menu-icon .navicon:before {
+    #menu-btn:checked~.menu-icon .navicon:before {
         transform: rotate(-45deg);
         top: 0;
     }
 
-    #menu-btn:checked ~ .menu-icon .navicon:after {
+    #menu-btn:checked~.menu-icon .navicon:after {
         transform: rotate(45deg);
         top: 0;
     }
 
-    #menu-btn:checked ~ .navlinks {
+    #menu-btn:checked~.navlinks {
         max-height: 50vh;
     }
 
-    #menu-btn:checked ~ .menu-icon .navicon {
+    #menu-btn:checked~.menu-icon .navicon {
         background: transparent;
     }
 
@@ -146,14 +148,14 @@ p {
         align-items: center;
         max-width: 1000px;
         margin: 0 auto;
-        
+
     }
 
     .navlink {
         padding: 20px 0 20px 40px;
         display: inline-block;
         text-decoration: none;
-    
+
     }
 
     .navlinks {
@@ -176,7 +178,7 @@ p {
         grid-gap: 2em;
         align-items: center;
     }
-    
+
 }
 
 
@@ -207,11 +209,11 @@ p {
 }
 
 @media (hover: none) {
-    #translate-btn:checked ~ .translate .japanese {
+    #translate-btn:checked~.translate .japanese {
         display: none;
     }
 
-    #translate-btn:checked ~ .translate .english {
+    #translate-btn:checked~.translate .english {
         display: inline;
     }
 }
@@ -258,15 +260,16 @@ p {
 }
 
 .whyux {
-    padding: 50px 0;     
+    padding: 50px 0;
 }
 
 @media (min-width: 800px) {
- 
+
     .whyux {
         padding: 100px 0;
-    
+
     }
+
     .about-bottom {
         padding-bottom: 100px;
     }
@@ -328,8 +331,7 @@ p {
 }
 
 
-.content-image
- {
+.content-image {
     border-radius: 30px;
 }
 
@@ -396,6 +398,7 @@ p {
         grid-gap: 5em;
         align-items: center;
     }
+
     .abouttext.image-left {
         grid-template-columns: 1fr auto;
     }
@@ -407,7 +410,7 @@ p {
     .about-image {
         width: 300px;
     }
-    
+
 }
 
 .content {
@@ -439,7 +442,7 @@ p {
 .wave-bottom {
     fill: #C1D8AC;
     display: block;
-   
+
 }
 
 .footer-green {
@@ -457,6 +460,7 @@ p {
     padding: 30px 0;
     margin: 30px 0;
 }
+
 .stage2 {
     background-color: #839B5C;
     width: 100%;
@@ -470,8 +474,16 @@ p {
     padding: 30px 0;
     margin: 30px 0;
 }
+
 .stage4 {
     background-color: #B78931;
+    width: 100%;
+    padding: 30px 0;
+    margin: 30px 0;
+}
+
+.stage5 {
+    background-color: #FFF3D9;
     width: 100%;
     padding: 30px 0;
     margin: 30px 0;
@@ -518,7 +530,7 @@ li {
     padding-top: 2em;
     justify-content: center;
     max-width: 100%;
-    
+
 }
 
 .hero-all-about-matcha {
@@ -542,6 +554,7 @@ li {
     .matcha-hero-image {
         max-width: 60%;
     }
+
     .matcha-hero {
         max-width: 1000px;
         display: flex;
@@ -551,25 +564,34 @@ li {
         color: #fff;
     }
 }
-    
 
-.hero-brightwheel { 
+
+.hero-brightwheel {
     background: #5E64DB;
     display: flex;
     align-items: center;
     padding-top: 4em;
     justify-content: center;
     max-width: 100%;
-} 
+}
 
-.hero-wtj { 
+.hero-wtj {
     background: #B78931;
     display: flex;
     align-items: center;
     padding-top: 2em;
     justify-content: center;
     max-width: 100%;
-} 
+}
+
+.hero-1thing {
+    background: #FFF3D9;
+    display: flex;
+    align-items: center;
+    padding-top: 2em;
+    justify-content: center;
+    max-width: 100%;
+}
 
 .mirror-content {
     align-items: center;
@@ -602,7 +624,7 @@ li {
 .lightbox {
     /* Default to hidden */
     display: none;
-  
+
     /* Overlay entire screen */
     position: fixed;
     z-index: 999;
@@ -610,25 +632,25 @@ li {
     left: 0;
     right: 0;
     bottom: 0;
-    
+
     /* A bit of padding around image */
     padding: 1em;
-  
+
     /* Translucent background */
     background: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Unhide the lightbox when it's the target */
-  .lightbox:target {
+}
+
+/* Unhide the lightbox when it's the target */
+.lightbox:target {
     display: block;
-  }
-  
-  .lightbox span {
+}
+
+.lightbox span {
     /* Full width and height */
     display: block;
     width: 100%;
     height: 100%;
-  
+
     /* Size and position background image */
     background-position: center;
     background-repeat: no-repeat;
@@ -641,10 +663,11 @@ li {
     border-radius: 20px;
     padding: 32px;
 }
-  
+
 .contact-text {
     margin: 0;
 }
+
 .contact-cta {
     border-radius: 20px;
     padding: 16px 32px;
@@ -669,8 +692,8 @@ li {
 .cta-button {
     background-color: #608959;
     color: #fff;
-  }
-  
+}
+
 
 .contact-cta:hover {
     background-color: #fff;
@@ -680,9 +703,9 @@ li {
 
 
 .case-study-title {
-font-size: 36px;
-margin-bottom: 16px;
-font-weight: bold;
+    font-size: 36px;
+    margin-bottom: 16px;
+    font-weight: bold;
 }
 
 .title-shurui {
@@ -711,7 +734,7 @@ font-weight: bold;
 }
 
 .case-study-image:hover {
-    transform: scale(1.05) ;
+    transform: scale(1.05);
     transform-origin: center;
 }
 
@@ -730,8 +753,8 @@ font-weight: bold;
     border: 2px solid #608959;
     margin: 32px 0;
     transition: all 0.65s;
-  }
-  
+}
+
 
 .case-study-cta:hover {
     background-color: #608959;
@@ -749,11 +772,13 @@ footer {
     padding: 10vh 0;
 
 }
+
 .after-case-study {
     padding: 10vh 0;
     text-align: right;
 
 }
+
 .previous-color:link,
 .previous-color:visited {
     color: #5E64DB;
@@ -765,7 +790,7 @@ footer {
 
 .previous-color-wtj:link,
 .previous-color-wtj:visited {
-    color:  #B78931;
+    color: #B78931;
 }
 
 .previous-color-wtj:hover {
@@ -774,7 +799,7 @@ footer {
 
 .previous-color-matcha:link,
 .previous-color-matcha:visited {
-    color:  #839B5C;
+    color: #839B5C;
 }
 
 .previous-color-matcha:hover {
@@ -791,12 +816,22 @@ footer {
 
 
 .video-content {
-    grid-template-columns: 1fr 1fr;
-    display: grid;
-    grid-gap: 5em;
-    align-items: center;
     margin-top: 50px;
+    align-items: center;
+
 }
+
+
+
+@media (min-width: 800px) {
+    .video-content {
+        grid-template-columns: 1fr 1fr;
+        display: grid;
+        grid-gap: 5em;
+    }
+
+}
+
 
 .video {
     width: 100%;
