Fixed footer bug

--- a/styles.css
+++ b/styles.css
@@ -944,11 +944,11 @@ footer {
 }
 
 .footer-attribute {
-    color: #c4c4c4;
+    color: #89898C;
 }
 
 .footer-link:link, .footer-link:visited {
-    color: #c4c4c4;
+    color: #89898C;
 }
 
 
