--- a/styles.css
+++ b/styles.css
@@ -967,3 +967,11 @@ footer {
     font-weight: 600;
     text-align: center;
 }
+
+
+
+.category-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 4rem 0 0.5rem 0;
+}
