--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,15 @@ p {
 
 .annotation {
     font-size: 18px;
-    margin: 1rem 0 0.5rem 0;
+    border-radius: 8px;
+    margin-top: 1rem;
+    background-color: #f5f5f5;
+    padding: 24px;
+}
+
+.annotation-emoji {
+    font-size: 24px;
+    padding-right: 8px;
 }
 
 .stage {
