--- a/styles.css
+++ b/styles.css
@@ -672,9 +672,16 @@ li {
     width: 100%;
 }
 
-.content-no-padding {
+.content-no-cursor {
     align-items: center;
-    padding: 2em 0;
+    padding: 1em 0 2em 0;
+    justify-content: center;
+    max-width: 100%;
+}
+
+.content-no-cursor-top {
+    align-items: center;
+    padding-top: 1em;
     justify-content: center;
     max-width: 100%;
 }
@@ -690,7 +697,7 @@ li {
 
 .content-top-bottom {
     align-items: center;
-    padding: 2em 0;
+    padding: 1em 0 2em 0;
     justify-content: center;
     max-width: 100%;
     cursor: zoom-in;
@@ -1055,4 +1062,22 @@ footer {
 
 .shopify-link:hover {
     color: #608959;
+}
+
+
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    margin: 1em 0 2em 0;
+
+}
+.youtube-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
