--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,10 @@ p {
         padding-bottom: 100px;
     }
 
+    .about-bottom .about-image {
+        width: 80%;
+    }
+
     .work {
         padding: 10vh 0 20vh;
     }
@@ -1080,4 +1084,11 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.non-design-images {
+    display: flex;
+    justify-content: space-around;
+
+
 }
